--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="grid"></div>
 
   <!-- Hidden audio element -->
-  <audio id="audioPlayer" playsinline webkit-playsinline></audio>
+  <audio id="audioPlayer" playsinline webkit-playsinline crossorigin="anonymous"></audio>
 
   <script src="script.js"></script>
 </body>
