--- a/index.html
+++ b/index.html
@@ -13,48 +13,50 @@
   <div class="controls">
     <!-- Previous Track Button -->
     <button id="prevTrack" aria-label="Previous Track">
-      <svg width="64" height="64" viewBox="0 0 64 64" fill="none" 
-           xmlns="http://www.w3.org/2000/svg">
-        <polygon points="48,15 48,49 24,32" fill="#000"/>
-        <rect x="18" y="15" width="6" height="34" fill="#000"/>
+      <svg width="100" height="100" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <polygon points="48,15 48,49 24,32" fill="#000" />
+        <rect x="18" y="15" width="6" height="34" fill="#000" />
       </svg>
     </button>
 
     <!-- Play/Pause Button (icon swapped via JS) -->
     <button id="playPause" aria-label="Play/Pause">
       <!-- Initially using the Play icon -->
-      <svg width="64" height="64" viewBox="0 0 64 64" fill="none" 
-           xmlns="http://www.w3.org/2000/svg">
-        <polygon points="20,15 20,49 50,32" fill="#000"/>
+      <svg width="100" height="100" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <polygon points="20,15 20,49 50,32" fill="#000" />
       </svg>
     </button>
 
     <!-- Stop Button -->
     <button id="stop" aria-label="Stop">
-      <svg width="64" height="64" viewBox="0 0 64 64" fill="none" 
-           xmlns="http://www.w3.org/2000/svg">
-        <rect x="18" y="18" width="28" height="28" fill="#000"/>
+      <svg width="100" height="100" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect x="18" y="18" width="28" height="28" fill="#000" />
       </svg>
     </button>
 
     <!-- Next Track Button -->
     <button id="nextTrack" aria-label="Next Track">
-      <svg width="64" height="64" viewBox="0 0 64 64" fill="none" 
-           xmlns="http://www.w3.org/2000/svg">
-        <polygon points="16,15 16,49 40,32" fill="#000"/>
-        <rect x="44" y="15" width="6" height="34" fill="#000"/>
+      <svg width="100" height="100" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <polygon points="16,15 16,49 40,32" fill="#000" />
+        <rect x="44" y="15" width="6" height="34" fill="#000" />
       </svg>
     </button>
 
     <!-- Loop Button -->
     <button id="toggleLoop" aria-label="Toggle Loop">
-      <svg id="loopIcon" width="64" height="64" viewBox="0 0 64 64" fill="none" 
-           xmlns="http://www.w3.org/2000/svg">
-        <path d="M20 24a12 12 0 0 1 12-12h12" stroke="#000" stroke-width="4" stroke-linecap="round"/>
-        <polyline points="48,12 48,24 36,24" stroke="#000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M44 40a12 12 0 0 1-12 12H20" stroke="#000" stroke-width="4" stroke-linecap="round"/>
-        <polyline points="16,52 16,40 28,40" stroke="#000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+      <?xml version="1.0" ?>
+      <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg
+        height="100px" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512"
+        width="100px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g>
+          <path
+            d="M309.1,96.8l-2.4-0.7c-3.7-1-7.5-2-11.8-2.9c-1.7-0.4-3.5-0.7-5.3-1.1c-2.8-0.5-5.6-0.9-8.5-1.2c-2.6-0.4-5.3-0.7-7.9-0.9   l-0.1-58l-102.9,90l103.3,89.6l-0.2-63.4c0.8,0.1,1.6,0.1,2.3,0.3c2.9,0.4,5.8,1,8.6,1.6c4.1,1,8,2.1,11.8,3.5   c2.2,0.8,4.4,1.6,6.5,2.5c4.3,1.9,8.5,4.1,12.6,6.6l1.2,0.7c1,0.6,2,1.2,3,1.8c4.3,2.9,8.4,6.2,12.5,10l1.1,0.9   c0.5,0.4,0.9,0.8,1.3,1.1c4,4,7.7,8.3,11.1,13.1l0.7,0.8c0.3,0.3,0.5,0.6,0.8,1c2.9,4.2,5.7,9.1,8.4,14.9c0.2,0.4,0.4,0.8,0.6,1.2   c0.2,0.3,0.4,0.7,0.5,1.1c2,4.5,3.6,9.6,5.2,16c0.1,0.5,0.3,1.1,0.5,1.6c0.1,0.4,0.3,0.8,0.4,1.4c1.4,6.5,2.1,13.3,2.1,20.2   c0.1,21.8-6.9,42.7-20.3,60.3l-5.5,7.2l43.4,39.2l7-8.6c22.8-28.4,34.8-62.3,34.7-98.3C423.8,178.4,377.6,117.5,309.1,96.8z" />
+          <path
+            d="M238.7,363.9c-0.8-0.1-1.6-0.1-2.4-0.3c-2.9-0.4-5.8-1-8.6-1.6c-3.9-0.9-7.8-2.1-11.8-3.5c-2.2-0.8-4.4-1.6-6.5-2.5   c-4.2-1.9-8.4-4.1-12.6-6.6l-1.4-0.8c-0.9-0.6-1.9-1.1-2.8-1.7c-4.3-2.9-8.4-6.2-12.5-10l-1.1-0.9c-0.5-0.4-0.9-0.8-1.3-1.1   c-3.9-3.8-7.5-8.1-11.1-13c-0.2-0.3-0.5-0.7-0.8-1c-0.2-0.3-0.5-0.5-0.7-0.9c-3-4.3-5.7-9.2-8.4-14.9c-0.2-0.5-0.5-1-0.7-1.4   c-0.2-0.3-0.4-0.6-0.5-0.9c-1.9-4.4-3.6-9.4-5.2-16c-0.1-0.6-0.3-1.1-0.5-1.6c-0.1-0.4-0.3-0.8-0.4-1.4c-1.4-6.5-2.1-13.2-2.2-20.1   c-0.1-21.9,7-42.7,20.3-60.3l5.5-7.2l-43.4-39.2l-7,8.6c-22.8,28.3-34.8,62.3-34.7,98.3c0.1,69.9,46.3,130.8,114.9,151.5l2.4,0.7   c3.7,1,7.5,2,11.8,2.9c1.7,0.4,3.5,0.8,5.3,1.1c2.8,0.5,5.7,0.9,8.5,1.2c2.7,0.4,5.3,0.6,7.9,0.9l0.1,58l102.9-90l-103.3-89.6   L238.7,363.9z" />
+        </g>
       </svg>
+
     </button>
 
     <!-- Volume Slider with Enhanced Styling -->
@@ -71,4 +73,3 @@
 </body>
 
 </html>
-
